# Takhleeq

./: .gitignore  CMakeLists.txt  README.md
src/: anNaml  anNaml.cpp
src/automata/gameOfLife/: gameOfLife  gameOfLife.cpp
src/automata/langtonsAnt/: langtonsAnt
